remise en route purge batch
